# plain-air-monitor

./: .gitignore  AGENTS.md  LICENSE  README.md  README_CN.md
.github/workflows/: esp-idf-build.yml
docs/: ARCHITECTURE.md  GLOBAL_REQUIREMENTS.md  HARDWARE_BOM.md  LOCAL_SETUP.md  REFERENCE_REPOS.md
espidf/: CMakeLists.txt  partitions.csv  sdkconfig.credentials.example  sdkconfig.defaults
espidf/components/bmp581/: CMakeLists.txt
espidf/components/bmp581/include/: pm_bmp581.h
espidf/components/bmp581/src/: pm_bmp581.c
espidf/components/data_store/: CMakeLists.txt
espidf/components/data_store/include/: data_store.h
espidf/components/data_store/src/: data_store.c
espidf/components/display_service/: CMakeLists.txt
espidf/components/display_service/include/: display_service.h
espidf/components/display_service/src/: display_service.c
espidf/components/i2c_bus/: CMakeLists.txt
espidf/components/i2c_bus/include/: i2c_bus.h
espidf/components/i2c_bus/src/: i2c_bus.c
espidf/components/microlink/: CMakeLists.txt  Kconfig
espidf/components/microlink/include/: microlink.h
espidf/components/microlink/src/: microlink.c  ml_coord.c
espidf/components/runtime_config/: CMakeLists.txt
espidf/components/runtime_config/include/: runtime_config.h
espidf/components/runtime_config/src/: runtime_config.c
espidf/components/scd41/: CMakeLists.txt
espidf/components/scd41/include/: pm_scd41.h
espidf/components/scd41/src/: pm_scd41.c
espidf/components/sensor_service/: CMakeLists.txt
espidf/components/sensor_service/include/: sensor_service.h
espidf/components/sensor_service/src/: sensor_service.c
espidf/components/sgp41/: CMakeLists.txt
espidf/components/sgp41/include/: pm_sgp41.h
espidf/components/sht45/: CMakeLists.txt
espidf/components/sps30/: CMakeLists.txt
espidf/components/sps30/include/: pm_sps30.h
espidf/components/sps30/src/: pm_sps30.c  sensirion_uart_hal_espidf.c
espidf/components/tailnet_service/: CMakeLists.txt
espidf/components/time_service/: CMakeLists.txt
espidf/components/web_server/: CMakeLists.txt  dashboard.html
espidf/components/web_server/include/: web_server.h
espidf/components/web_server/src/: web_server.c
espidf/components/wifi_station/: CMakeLists.txt
espidf/main/: CMakeLists.txt  main.c  pm_credentials.h.in
reference/sps30/: AppConfig.h  ErrorHandler.h  PORTING_NOTES.md  Pins.h  SensorManager.cpp  SensorManager.h  sensirion_uart_hal_integration.cpp
reference/sps30/lib_SPS30/: sensirion_common.c  sensirion_config.h  sensirion_shdlc.h  sensirion_streaming.h  sensirion_streaming_shdlc.c  sensirion_streaming_shdlc.h  sensirion_uart_hal.h  sensirion_uart_portdescriptor.h  sps30_uart.h
scripts/: idf-env.sh
(+11 files in other folders)
